data/derived/comb/progs/unify/prog2931.ml.out
Characters 30-32:
  let _ = eval(Half(VarY), 0.3, 0.-1);;
                                ^^
Error: This expression has type float but an expression was expected of type
         int
